<resources>
    <string name="app_name">login</string>
    <string name="title_activity_layout_login">layout_login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="logIn">Log in</string>
    <string name="pass">******</string>
    <string name="hint_username">user name\n</string>
    <string name="hint_password">password\n</string>
    <string name="star_pelis">Star Pelis</string>
    <string name="sinCuenta">¿Aun no tenes una cuenta?</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="confirm_password">Confirm password</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="guardar">Guardar</string>
    <string name="item_biblioteca">Biblioteca</string>
    <string name="item_inicio">Inicio</string>
    <string name="item_buscar">Buscar</string>
    <string name="carousel_de_carteleras">carousel de carteleras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchbar_hint">search_bar\n</string>
    <string name="favorite">favoritos\n</string>
    <string name="menuBarra">menu barra\n</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Aceptar</string>

</resources>