<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/userName"/>

        <EditText
            android:id="@+id/textUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:textSize="15sp"
            android:hint="@string/hint_username" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:hint="@string/hint_password" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/logIn" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>