<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/ptsansnarrow_regular"
            android:text="@string/crearCuenta"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"/>

        <com.google.android.material.textfield.TextInputEditText
     android:id="@+id/addfirstName"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/nombre"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/addlastName"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/apellido"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addEmail"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="textEmailAddress"
            android:hint="@string/example_gmail_com"
            android:layout_marginBottom="20dp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addUserName"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="text"
            android:hint="@string/userName"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addPassword"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveUser"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/guardar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>